test/custom_configs/bad/003-BadBacklight.h
#define LCD_BACKLIGHT_STEP 26
